--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -8801,6 +8801,35 @@ $ asttable table.fits -cID,RA -cDEC \
 
 @item imgtowcs
 Similar to @code{wcstoimg}, except that image/dataset coordinates are converted to WCS coordinates.
+
+@item angular-distance
+Return the spherical angular distance (along a great circle, in degrees) between the given two points.
+Note that each point needs two coordinates (in degrees), so this operator needs four operands.
+The first and second popped operands are considered to belong to one point and the third and fourth popped operands to the second point.
+
+Each of the input points can be a single coordinate or a full table column (containing many points.
+In other words, the following commands are all valid:
+
+@example
+$ asttable table.fits \
+           -c"arith RA1 DEC1 RA2 DEC2 angular-distance"
+$ asttable table.fits \
+           -c"arith RA DEC 12.345 6.789 angular-distance"
+$ asttable table.fits \
+           -c"arith 12.345 6.789 RA DEC angular-distance"
+@end example
+
+In the first case we are assuming that @file{table.fits} has the following four columns @code{RA1}, @code{DEC1}, @code{RA2}, @code{DEC2}.
+The returned column by this operator would be the difference between two points in each row with coordinates like the following (@code{RA1}, @code{DEC1}) and (@code{RA2}, @code{DEC2}).
+In other words, for each row, the angular distance between different points is calculated.
+
+In the second and third cases (which are identical), it is assumed that @file{table.fits} has the two columns @code{RA} and @code{DEC}.
+The returned column by this operator will be the difference of each row with the fixed point of (12.345, 6.789).
+
+The distance (along a great circle) on a sphere between two points is calculated with the equation below, where @mymath{r_1}, @mymath{r_2}, @mymath{d_1} and @mymath{d_2} are the right ascensions and declinations of points 1 and 2.
+
+@dispmath {\cos(d)=\sin(d_1)\sin(d_2)+\cos(d_1)\cos(d_2)\cos(r_1-r_2)}
+
 @end table
 
 
