BuildProgram: --cc option allows using custom C compiler
Until now `gcc' was hard-coded into BuildProgram, so a GCC that is in the
search path was the only way to run BuildProgram. This would cause a crash
cases when there is no `gcc' in the PATH.

With this commit, BuildProgram has the new `--cc' option to let the user
explicitly set the compiler. If `--cc' hasn't been used, then it will look
into the `CC' and `GCC' environment variables and ultimately, if it can't
find anything in them, it will use `gcc'. This gives the users much greater

This was reported by Sebastián Luna Valero, while attempting to package
Gnuastro for conda-forge.

--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,10 @@ See the end of the file for license conditions.
    --onedonstdout: when the output is one-dimensional, print the values on
      the standard output, not into a file.
 
+  BuildProgram:
+   --cc: custom C compiler to use. Until now, `gcc' was hard-coded into the
+     source and there was no way to choose a custom C compiler.
+
   ConvertType:
    - New `viridis' colormap (value for the `--colormap' option). This is
      the default colormap of Python's Matplotlib, and is available in many
