--- a/THANKS
+++ b/THANKS
@@ -53,6 +53,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Geoffry Krouchi                      geoffrey.krouchi@etu.univ-lyon1.fr
     Floriane Leclercq                    floriane.leclercq@univ-lyon1.fr
     Alan Lefor                           alefor@astr.tohoku.ac.jp
+    Sebastián Luna Valero                sluna@iaa.es
     Guillaume Mahler                     guillaume.mahler@univ-lyon1.fr
     Juan Molina Tobar                    juan.a.molina.t@gmail.com
     Francesco Montanari                  francesco.montanari@openmailbox.org
