Internal Library: directory write permission checked with temp file
Until now, we were using the `faccessat' function for checking the
permission flags to write in a library (in particular with the `AT_FDCWD'
and `AT_EACCESS' macros). But these two macros recently caused a crash on
macOS 10.9 (while trying to build for Conda).

To fix this problem and have a more generic test, we now actually try to
build a temporary file in the directory (and delete it afterwards). This
totally removes the need for the `faccessat' library function and thus the
need for those problematic macros on older machines.

This fixes bug #56999.

--- a/NEWS
+++ b/NEWS
@@ -45,6 +45,7 @@ See the end of the file for license conditions.
   bug #56736: CosmicCalculator crash when a single value given to --obsline.
   bug #56747: ConvertType's SLS colormap has black pixels which should be orange.
   bug #56754: Wrong sigma clipping output when many values are equal.
+  bug #56999: Compilation error on macOS 10.9 not recognizing AT_FDCWD.
 
 
 
