Statistics: --contour option calculates contours for PGFPlots
One of the common things we need when doing an 2D analysis of an image is a
contour plot. Plotting tools like Matplotlib do calculate it internally,
but others like the LaTeX PGFPlots package doesn't. PGFPlots doesn't need
all the dependencies of Matplotlib and is much more easier to build within
LaTeX and creates much higher quality plots.

With this option, it is now very easy to create the necessary inputs to
PGFPlots and use it to make contours over a dispalyed image.

To do this, a new function has also been added to the library:
`gal_binary_connected_indexs', it operates very similar to the connected
component labeling function, but just keeps the labels.

--- a/NEWS
+++ b/NEWS
@@ -25,6 +25,11 @@ See the end of the file for license conditions.
      the redshift given to CosmicCalculator. You can either use known line
      names, or directly give a number as any emitted line's wavelength.
 
+  Statistics:
+   --contour: compute a contour plot which can be directly fed into the
+     PGFPlots package of LaTeX for plotting the contours. Support for more
+     formats will be added based on the need/request.
+
   Table:
    --equal: Output only rows that have a value equal to the given value in
      the given column. For example `--equal=ID,2,4,5' will select only rows
@@ -36,6 +41,9 @@ See the end of the file for license conditions.
        distance (along a great circle) between points in various table
        columns, or the distances of all the points in the table rows with a
        fixed point. See the book for examples and better explanation.
+
+  Library:
+   - gal_binary_connected_indexs: store indexs of connected components.
 
 ** Removed features
 
