BuildProgram: reading LDFLAGS and CPPFLAGS env for customization
Until now, BuildProgram's compilation was only configured through options
(and just recently the `CC' and `GCC' environment variables). But in some
scenarios, the user may want better control of the build and the default
`-L' and `-I' options of BuildProgram (same as the linking and include
options of the C compiler) may not be enough.

We recently came up with such a scenario when trying to build Gnuastro
through Conda on macOS. It added several linking flags through `-Wl' that
BuildProgram ignores.

With this commit, by default BuildProgram will use the `CPPFLAGS' and
`LDFLAGS' environment variables also. But their checking can be disabled
with the new `--noenv' option.

--- a/NEWS
+++ b/NEWS
@@ -12,8 +12,11 @@ See the end of the file for license conditions.
      the standard output, not into a file.
 
   BuildProgram:
+   - Will use common environment variables like LDFLAGS, CPPFLAGS and CC to
+     help in customizing the build of your program.
    --cc: custom C compiler to use. Until now, `gcc' was hard-coded into the
      source and there was no way to choose a custom C compiler.
+   --noenv: With this option, no environment variables will be read.
 
   ConvertType:
    - New `viridis' colormap (value for the `--colormap' option). This is
@@ -54,6 +57,7 @@ See the end of the file for license conditions.
   bug #56747: ConvertType's SLS colormap has black pixels which should be orange.
   bug #56754: Wrong sigma clipping output when many values are equal.
   bug #56999: Compilation error on macOS 10.9 not recognizing AT_FDCWD.
+  bug #57057: BuildProgram not using environment LDFLAGS or CPPFLAGS.
 
 
 
