THANKS: added Alexy's name to the list
While Alexey had made some very good suggestions until now, I had forgot to
add his name to `THANKS'. This is corrected with this commit.

--- a/THANKS
+++ b/THANKS
@@ -34,6 +34,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Benjamin Clement                     benjamin.clement@univ-lyon1.fr
     Nima Dehdilani                       nimadehdilani@gmail.com
     Antonio Diaz Diaz                    antonio@gnu.org
+    Alexey Dokuchaev                     danfe@freebsd.org
     Pierre-Alain Duc                     pierre-alain.duc@astro.unistra.fr
     Elham Eftekhari                      elhamea@iac.es
     Gaspar Galaz                         ggalaz@astro.puc.cl
