--- a/NEWS
+++ b/NEWS
@@ -58,6 +58,7 @@ See the end of the file for license conditions.
   bug #56754: Wrong sigma clipping output when many values are equal.
   bug #56999: Compilation error on macOS 10.9 not recognizing AT_FDCWD.
   bug #57057: BuildProgram not using environment LDFLAGS or CPPFLAGS.
+  bug #57101: Crop segmentation fault when no overlap exists in image-mode.
 
 
 
